harborfinal/templates/core/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-core
  namespace: harborfinal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor-core
  template:
    metadata:
      labels:
        app: harbor-core
    spec:
      containers:
      - name: harbor-core
        image: goharbor/harbor-core:v2.12.2
        volumeMounts:
        - name: config-volume
          mountPath: /etc/harbor/app.conf
          subPath: app.conf
      volumes:
      - name: config-volume
        configMap:
          name: harbor-core-config
