harborfinal/templates/core/pvc-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-test
  namespace: harborfinal
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
      volumeMounts:
        - mountPath: "/data"
          name: storage
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: pvc.yaml
