harborfinal/templates/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-core
  namespace: harborfinal
spec:
  selector:
    app: harbor-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
