harborfinal/templates/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-core
  namespace: harborfinal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: harbor.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 80
